# atom_proj

./: Dockerfile  Dockerfile.backend  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
celery/: Dockerfile  Dockerfile.celery  Dockerfile.db  requirements.txt
habits/: models.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_related_habit_alter_habit_time_required.py  0004_habit_telegram_chat_id.py  0005_alter_habit_telegram_chat_id.py
postgresql/: Dockerfile  init.sql
settings_app/: celery.py  paginator.py  permissions.py  serializers.py  settings.py  tasks.py  telegram_utils.py  urls.py  validators.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
