[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["glebk <glebkot57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
decouple = "^0.0.7"
djangorestframework = "^3.14.0"
django-perms = "^2.1.0"
generics = "^6.0.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
